update(pages): feed
Add client:load directive to the FeedApp component

--- a/src/pages/feed.astro
+++ b/src/pages/feed.astro
@@ -5,5 +5,5 @@ import { Feed as FeedApp } from "@/components/Feed";
 ---
 
 <Layout title="Opus - mi feed">
-  <FeedApp />
+  <FeedApp client:load />
 </Layout>
