--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,67 +1,69 @@
 ---
+import { LoginPage } from "@/components/application/LoginPage";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Opus - Inicio de sesión">
-  <main
-    class="bg min-h-screen relative flex flex-col justify-start lg:justify-center pt-20 lg:pt-0 items-center"
-  >
-    <a
-      href="/"
-      class="absolute top-0 left-0 text-white w-10 h-10 inline-flex justify-center items-center bg-brand-blue hover:bg-brand-red transition-all rounded-full m-5"
-    >
-      <span class="fas fa-arrow-left fa-xl"></span>
-    </a>
-
-    <form
-      id="user-form"
-      method="POST"
-      class="flex flex-col bg-brand-black-900 p-4 gap-4 max-w-screen-xs text-white rounded-md m-5 md:m-0"
-    >
-      <section class="flex flex-col gap-4">
-        <img src="/brand-logo-full.svg" alt="Opus full brand logo" />
-        <h1 class="text-2xl font-bold text-center">Inicio de sesión</h1>
-      </section>
-
-      <section class="flex flex-col gap-2">
-        <label for="Email">Correo electronico</label>
-        <input class="input" id="Email" name="Email" type="text" />
-        <section class="">
-          <p class="hidden">Error message goes here</p>
-        </section>
-      </section>
-
-      <section class="flex flex-col gap-2">
-        <label for="Password">Contraseña</label>
-        <input class="input" id="Password" name="Password" type="password" />
-        <section class="">
-          <p class="hidden">Error message goes here</p>
-        </section>
-      </section>
-
-      <section class="grid">
-        <p class="text-xs">
-          ¿Aún no tienes cuenta? registrate <a href="/register" class="link">aquí</a>
-        </p>
-      </section>
-      
-      <section class="flex flex-col">
-        <button type="button" class="bg-teal-500 text-white p-2 rounded-md">
-          Iniciar sesión
-        </button>
-      </section>
-
-    </form>
-  </main>
+  <LoginPage client:load/>
 </Layout>
 
-<style>
+<!-- <main
+  class="bg min-h-screen relative flex flex-col justify-start lg:justify-center pt-20 lg:pt-0 items-center"
+>
+  <a
+    href="/"
+    class="absolute top-0 left-0 text-white w-10 h-10 inline-flex justify-center items-center bg-brand-blue hover:bg-brand-red transition-all rounded-full m-5"
+  >
+    <span class="fas fa-arrow-left fa-xl"></span>
+  </a>
+
+  <form
+    id="user-form"
+    method="POST"
+    class="flex flex-col bg-brand-blue-900 p-4 gap-4 max-w-screen-xs text-white rounded-md m-5 md:m-0"
+  >
+    <section class="flex flex-col gap-4">
+      <img src="/brand-logo-full.svg" alt="Opus full brand logo" />
+      <h1 class="text-2xl font-bold text-center">Inicio de sesión</h1>
+    </section>
+
+    <section class="flex flex-col gap-2">
+      <label for="Email">Correo electronico</label>
+      <input class="input" id="Email" name="Email" type="text" />
+      <section class="">
+        <p class="hidden">Error message goes here</p>
+      </section>
+    </section>
+
+    <section class="flex flex-col gap-2">
+      <label for="Password">Contraseña</label>
+      <input class="input" id="Password" name="Password" type="password" />
+      <section class="">
+        <p class="hidden">Error message goes here</p>
+      </section>
+    </section>
+
+    <section class="grid">
+      <p class="text-xs">
+        ¿Aún no tienes cuenta? registrate <a href="/register" class="link">aquí</a>
+      </p>
+    </section>
+    
+    <section class="flex flex-col">
+      <button type="button" class="bg-teal-500 text-white p-2 rounded-md">
+        Iniciar sesión
+      </button>
+    </section>
+
+  </form>
+</main> -->
+<!-- <style>
   .bg {
     background-image: url("/dots-pattern.svg");
   }
 
   .input {
-    @apply bg-transparent w-full focus:bg-brand-black border focus:border-blue-500 hover:border-blue-500 rounded-md pl-2 h-8 text-xs md:text-sm lg:text-base;
+    @apply bg-transparent w-full focus:bg-brand-blue-800 border focus:border-blue-500 hover:border-blue-500 rounded-md pl-2 h-8 text-xs md:text-sm lg:text-base;
   }
 
   .error {
@@ -71,4 +73,4 @@ import Layout from "../layouts/Layout.astro";
   .link {
     @apply text-teal-500 hover:underline transition-all;
   }
-</style>
+</style> -->
