--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,8 @@ import "@fontsource/ubuntu/400.css";
 import "@fontsource/ubuntu/500.css";
 import "@fontsource/ubuntu/700.css";
 
+import { ViewTransitions } from "astro:transitions";
+
 interface Props {
 	title: string;
 }
@@ -16,8 +18,8 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
-	<head>
+<html lang="es" transition:animate="initial">
+	<>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
@@ -31,6 +33,7 @@ const { title } = Astro.props;
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+		<ViewTransitions />
 	</head>
 	<body class="app min-h-screen">
 		<slot />
