update(pages): use FormLayout

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,11 +1,11 @@
 ---
 import { LoginPage } from "@/components/application/LoginPage";
-import Layout from "../layouts/Layout.astro";
+import FormLayout from "@/layouts/FormLayout.astro";
 ---
 
-<Layout title="Opus - Inicio de sesión">
+<FormLayout title="Opus - Inicio de sesión">
   <LoginPage client:load/>
-</Layout>
+</FormLayout>
 
 <!-- <main
   class="bg min-h-screen relative flex flex-col justify-start lg:justify-center pt-20 lg:pt-0 items-center"
