--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -1,7 +1,7 @@
 ---
 import { RegisterPage } from "@/components/application/RegisterPage";
-import Layout from "../layouts/Layout.astro";
+import FormLayout from "@/layouts/FormLayout.astro";
 ---
-<Layout title="Opus - Registro">
+<FormLayout title="Opus - Registro">
   <RegisterPage client:load />
-</Layout>
+</FormLayout>
