--- a/src/layouts/FormLayout.astro
+++ b/src/layouts/FormLayout.astro
@@ -17,7 +17,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<html lang="es">
+<html lang="es" transition:animate="fade">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -30,6 +30,7 @@ const { title } = Astro.props;
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <ViewTransitions />
     <title>{title}</title>
   </head>
   <body>
