--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,109 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import { Header } from '@/components/Header'
-import { Footer } from '@/components/Footer';
+import Layout from "../layouts/Layout.astro";
+import { Header } from "@/components/Header";
+import { Footer } from "@/components/Footer";
+import FormLayout from "@/layouts/FormLayout.astro";
 ---
 
 <Layout title="Opus - Inicio">
 	<Header client:load />
-	<main class="p-2">
-		Index page content goes here
+	<main class="flex flex-col p-2 z-0 gap-20">
+		<section class="flex flex-col gap-4 md:flex-row content">
+			<section class="flex flex-col gap-4">
+				<h1 class="text-3xl text-center font-bold lg:text-5xl lg:p-5">
+					¡Bienvenido a OPUS!
+				</h1>
+
+				<p class="text-justify text-xl md:pl-4 md:text-center lg:text-2xl">
+					Tu Plataforma tecnológica para la libre expresión.
+				</p>
+
+				<p class="text-justify md:p-4">
+					La gestión eficiente de información se ha converitdo en un componente
+					esencial para el desarrollo de proyectos. En este contexto, surge
+					"OPUS", una plataforma que te permite organizar y compartir contenido
+					relacionado con la tecnología de manera efectiva.
+				</p>
+			</section>
+			<img
+				class=""
+				src="/welcome.png"
+				alt=""
+				width="480"
+				height="270"
+				loading="lazy"
+			/>
+		</section>
+
+		<section class="flex flex-col gap-4 md:flex-row justify-start content">
+			<img
+				class="order-2 md:order-1"
+				src="/Reopus.png"
+				alt=""
+				width="480"
+				loading="lazy"
+			/>
+			<section class="flex flex-col gap-4 order-1 flex-1">
+				<h2 class="text-3xl text-center font-bold lg:text-5xl lg:p-5">
+					¿Qué es OPUS?
+				</h2>
+
+				<p class="text-justify md:p-4">
+					OPUS es más que una plataforma tecnológica; es un espacio dedicado a
+					la creación, publicación y exploración de contenido enfocado al área
+					tecnológica. Nuestro nombre refleja nuestra dedicación a la expresión
+					creativa y valiosa de conocimientos, experiencias y recomendaciones en
+					las distintas categorías tecnológicas.
+				</p>
+			</section>
+		</section>
+
+		<section class="flex flex-col gap-4 justify-start content">
+			<h2 class="text-3xl font-bold text-center">¡Únete a OPUS!</h2>
+
+			<p class="text-justify p-2 md:p-4">
+				¡Únete a OPUS y forma parte de una comunidad dinámica de creadores y
+				entusiastas de la tecnología! Crea, comparte, aprende y colabora en un
+				entorno que valora tu creatividad y conocimiento. ¡Comienza tu viaje con
+				OPUS hoy mismo!
+			</p>
+
+			<a
+				class="inline-flex justify-center bg-teal-500 text-white p-2 rounded-md shadow-md mx-auto"
+				href="/register"
+			>
+				Registrarse en opus
+			</a>
+		</section>
+
+		<section class="flex flex-col gap-4 content">
+			<h2 class="text-3xl font-bold text-center">Contacto y Soporte</h2>
+
+			<p class="text-justify">
+				¿Necesitas ayuda o tienes alguna pregunta? Nuestro equipo de soporte
+				está aquí para ayudarte.
+			</p>
+
+			<p class="">
+				Correo electrónico: <a class="text-blue-500 hover:underline" href=""
+					>soporte@partumunitstudio.com</a
+				>
+			</p>
+			<p class="">
+				Teléfono: <a
+					class="text-blue-500 hover:underline"
+					href="tel:+523221234512">+1 (322) 123-4512</a
+				>
+			</p>
+		</section>
+
+		<div class="ad" id="ad"></div>
 	</main>
 	<Footer />
 </Layout>
 
 <style>
+	.content {
+		@apply max-w-screen-lg mx-auto;
+	}
 </style>
