--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,15 @@
 ---
+import "@fontsource/ubuntu/300-italic.css";
+import "@fontsource/ubuntu/400-italic.css";
+import "@fontsource/ubuntu/500-italic.css";
+import "@fontsource/ubuntu/700-italic.css";
+import "@fontsource/ubuntu/300.css";
+import "@fontsource/ubuntu/400.css";
+import "@fontsource/ubuntu/500.css";
+import "@fontsource/ubuntu/700.css";
+
+import { ViewTransitions } from "astro:transitions";
+
 interface Props {
 	title: string;
 }
@@ -7,8 +18,8 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
-	<head>
+<html lang="es" transition:animate="initial">
+	<>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
@@ -22,16 +33,25 @@ const { title } = Astro.props;
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+		<ViewTransitions />
 	</head>
 	<body class="app min-h-screen">
 		<slot />
 	</body>
 </html>
 <style is:global>
+	body {
+		font-family: "Ubuntu", sans-serif;
+	}
+
 	.app {
 		min-height: 100vh;
 		min-height: 100dvh;
 		display: grid;
 		grid-template-rows: auto 1fr auto;
+	}
+
+	*:focus {
+		outline: none;
 	}
 </style>
