update(page): index
Fix button color, change its value from teal to blue, add mailto:email
to the support email.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ import FormLayout from "@/layouts/FormLayout.astro";
 			</p>
 
 			<a
-				class="inline-flex justify-center bg-teal-500 text-white p-2 rounded-md shadow-md mx-auto"
+				class="inline-flex justify-center bg-blue-500 text-white p-2 rounded-md shadow-md mx-auto"
 				href="/register"
 			>
 				Registrarse en opus
@@ -85,7 +85,7 @@ import FormLayout from "@/layouts/FormLayout.astro";
 			</p>
 
 			<p class="">
-				Correo electrónico: <a class="text-blue-500 hover:underline" href=""
+				Correo electrónico: <a class="text-blue-500 hover:underline" href="mailto:soporte@partumunitstudio.com"
 					>soporte@partumunitstudio.com</a
 				>
 			</p>
