--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,8 +18,8 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es" transition:animate="initial">
-	<>
+<html lang="es" transition:animate="fade">
+	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
