update(styles): form module css
Adjust background image path

--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -1,6 +1,6 @@
 .formBackground {
   @apply min-h-screen relative flex flex-col justify-start lg:justify-center pt-20 lg:pt-0 items-center bg-brand-blue-500;
-  background-image: url('./dots-pattern.png');
+  background-image: url('/dots-pattern.png');
 }
 
 .exitLink {
